syntax = "proto3";

option csharp_namespace = "FSR.GRPC.Lib.V3";

package FSR.GRPC.Lib.V3;

/* Profbuf example */

// message Foo {
//   bool bar = 1;
// }

// message TestModel {
//   repeated Foo foo = 1;
//   string teststr = 2;
// }

/* AAS Models V3 */

message ExtensionDTO {
  ReferenceDTO semanticId = 1;
  repeated ReferenceDTO supplementalSemanticIds = 2;
  string name = 3;
  DataTypeDefXsd valueType = 4;
  string value = 5;
  repeated ReferenceDTO refersTo = 6;
}

enum ModellingKind {
  MODELLING_KIND_TEMPLATE = 0;
  MODELLING_KIND_INSTANCE = 1;
}

message AdministrativeInformationDTO {
  repeated EmbeddedDataSpecificationDTO embeddedDataSpecifications = 1;
  string version = 2;
  string revision = 3;
  ReferenceDTO creator = 4;
  string templateId = 5;
}

enum QualifierKind {
  QUALIFIER_KIND_VALUE_QUALIFIER = 0;
  QUALIFIER_KIND_CONCEPT_QUALIFIER = 1;
  QUALIFIER_KIND_TEMPLATE_QUALIFIER = 2;
}

message QualifierDTO {
  ReferenceDTO semanticId = 1;
  repeated ReferenceDTO supplementalSemanticIds = 2;
  QualifierKind kind = 3;
  string type = 4;
  DataTypeDefXsd valueType = 5;
  string value = 6;
  ReferenceDTO valueId = 7;
}

message AssetAdministrationShellDTO {
  repeated ExtensionDTO extensions = 1;
  string category = 2;
  string idShort = 3;
  repeated LangStringDTO displayName = 4;
  repeated LangStringDTO description = 5;
  AdministrativeInformationDTO administration = 6;
  string id = 7;
  repeated EmbeddedDataSpecificationDTO embeddedDataSpecifications = 8;
  ReferenceDTO derivedFrom = 9;
  AssetInformationDTO assetInformation = 10;
  repeated ReferenceDTO submodels = 11;
}

message AssetInformationDTO {
  AssetKind assetKind = 1;
  string globalAssetId = 2;
  repeated SpecificAssetIdDTO specificAssetIds = 3;
  string assetType = 4;
  ResourceDTO defaultThumbnail = 5;
}

message ResourceDTO {
  string Path = 1;
  string ContentType = 2;
}

enum AssetKind {
  ASSET_KIND_TYPE = 0;
  ASSET_KIND_INSTANCE = 1;
  ASSET_KIND_NOT_APPLICABLE = 2;
}

message SpecificAssetIdDTO {
  ReferenceDTO semanticId = 1;
  repeated ReferenceDTO supplementalSemanticIds = 2;
  string name = 3;
  string value = 4;
  ReferenceDTO externalSubjectId = 5;
}

message SubmodelDTO {
  repeated ExtensionDTO extensions = 1;
  string category = 2;
  string idShort = 3;
  repeated LangStringDTO displayName = 4;
  repeated LangStringDTO description = 5;
  AdministrativeInformationDTO administration = 6;
  string id = 7;
  ModellingKind kind = 8;
  ReferenceDTO semanticId = 9;
  repeated ReferenceDTO supplementalSemanticIds = 10;
  repeated QualifierDTO qualifiers = 11;
  repeated EmbeddedDataSpecificationDTO embeddedDataSpecifications = 12;
  repeated SubmodelElementDTO submodelElements = 13;
}

enum SubmodelElementType {
  SUBMODEL_ELEMENT_TYPE_ANNOTATED_RELATIONSHIP_ELEMENT = 0;
  SUBMODEL_ELEMENT_TYPE_BASIC_EVENT_ELEMENT = 1;
  SUBMODEL_ELEMENT_TYPE_BLOB = 2;
  SUBMODEL_ELEMENT_TYPE_CAPABILITY = 3;
  SUBMODEL_ELEMENT_TYPE_DATA_ELEMENT = 4;
  SUBMODEL_ELEMENT_TYPE_ENTITY = 5;
  SUBMODEL_ELEMENT_TYPE_EVENT_ELEMENT = 6;
  SUBMODEL_ELEMENT_TYPE_FILE = 7;
  SUBMODEL_ELEMENT_TYPE_MULTI_LANGUAGE_PROPERTY = 8;
  SUBMODEL_ELEMENT_TYPE_OPERATION = 9;
  SUBMODEL_ELEMENT_TYPE_PROPERTY = 10;
  SUBMODEL_ELEMENT_TYPE_RANGE = 11;
  SUBMODEL_ELEMENT_TYPE_REFERENCE_ELEMENT = 12;
  SUBMODEL_ELEMENT_TYPE_RELATIONSHIP_ELEMENT = 13;
  SUBMODEL_ELEMENT_TYPE_SUBMODEL_ELEMENT = 14;
  SUBMODEL_ELEMENT_TYPE_SUBMODEL_ELEMENT_LIST = 15;
  SUBMODEL_ELEMENT_TYPE_SUBMODEL_ELEMENT_COLLECTION = 16;
}

message SubmodelElementDTO {
  repeated ExtensionDTO extensions = 1;
  string category = 2;
  string idShort = 3;
  repeated LangStringDTO displayName = 4;
  repeated LangStringDTO description = 5;
  ReferenceDTO semanticId = 6;
  repeated ReferenceDTO supplementalSemanticIds = 7;
  repeated QualifierDTO qualifiers = 8;
  repeated EmbeddedDataSpecificationDTO embeddedDataSpecifications = 9;
  SubmodelElementType submodelElementType = 10;
  // SubmodelElement payload here.
  // TODO: Find better solution! (Current solution causes an overhead of around 128 bytes per model)
  AnnotatedRelationshipElementPayloadDTO annotatedRelationshipElement = 11;
  BasicEventElementPayloadDTO basicEventElement = 12;
  BlobPayloadDTO blob = 13;
  CapabilityPayloadDTO capability = 14;
  DataElementPayloadDTO dataElement = 15;
  EntityPayloadDTO entity = 16;
  EventElementPayloadDTO eventElement = 17;
  FilePayloadDTO file = 18;
  MultiLanguagePropertyPayloadDTO multiLanguageProperty = 19;
  OperationPayloadDTO operation = 20;
  PropertyPayloadDTO property = 21;
  RangePayloadDTO range = 22;
  ReferenceElementPayloadDTO referenceElement = 23;
  RelationshipElementPayloadDTO relationshipElement = 24;
  SubmodelElementListPayloadDTO submodelElementList = 25;
  SubmodelElementCollectionPayloadDTO submodelElementCollection = 26;
}

message RelationshipElementPayloadDTO {
  ReferenceDTO first = 1;
  ReferenceDTO second = 2;
}

message SubmodelElementListPayloadDTO {
  bool orderRelevant = 1;
  ReferenceDTO semanticIdListElement = 2;
  SubmodelElementType typeValueListElement = 3;
  DataTypeDefXsd valueTypeListElement = 4;
  repeated SubmodelElementDTO value = 5;
}

message SubmodelElementCollectionPayloadDTO {
  repeated SubmodelElementDTO value = 1;
}

message DataElementPayloadDTO {
  // Intentionally empty
}

message DataElementDTO {
  repeated ExtensionDTO extensions = 1;
  string category = 2;
  string idShort = 3;
  repeated LangStringDTO displayName = 4;
  repeated LangStringDTO description = 5;
  ReferenceDTO semanticId = 6;
  repeated ReferenceDTO supplementalSemanticIds = 7;
  repeated QualifierDTO qualifiers = 8;
  repeated EmbeddedDataSpecificationDTO embeddedDataSpecifications = 9;
  SubmodelElementType submodelElementType = 10;
  // DataElement payload here.
  // TODO: Find better solution! (Current solution causes an overhead of around 48 bytes per model)
  PropertyPayloadDTO property = 11;
  MultiLanguagePropertyPayloadDTO multiLanguageProperty = 12;
  RangePayloadDTO range = 13;
  ReferenceElementPayloadDTO referenceElement = 14;
  BlobPayloadDTO blob = 15;
  FilePayloadDTO file = 16;
}

message PropertyPayloadDTO {
  DataTypeDefXsd valueType = 1;
  string value = 2;
  ReferenceDTO valueId = 3;
}

message MultiLanguagePropertyPayloadDTO {
  repeated LangStringDTO value = 1;
  ReferenceDTO valueId = 2;
}

message RangePayloadDTO {
  DataTypeDefXsd valueType = 1;
  string min = 2;
  string max = 3;
}

message ReferenceElementPayloadDTO {
  ReferenceDTO value = 1;
}

message BlobPayloadDTO {
  bytes value = 1;
  string contentType = 2;
}

message FilePayloadDTO {
  string value = 1;
  string contentType = 2;
}

message AnnotatedRelationshipElementPayloadDTO {
  ReferenceDTO first = 1;
  ReferenceDTO second = 2;
  repeated DataElementDTO annotations = 3;
}

message EntityPayloadDTO {
  repeated SubmodelElementDTO statements = 1;
  EntityType entityType = 2;
  string globalAssetId = 3;
  repeated SpecificAssetIdDTO specificAssetIds = 4;
}

enum EntityType {
  ENTITY_TYPE_CO_MANAGED_ENTITY = 0;
  ENTITY_TYPE_SELF_MANAGED_ENTITY = 1;
}

enum Direction {
  DIRECTION_INPUT = 0;
  DIRECTION_OUTPUT = 1;
}

enum StateOfEvent {
  STATE_OF_EVENT_ON = 0;
  STATE_OF_EVENT_OFF = 1;
}

message EventPayloadDTO {
  ReferenceDTO source = 1;
  ReferenceDTO sourceSemanticId = 2;
  ReferenceDTO observableReference = 3;
  ReferenceDTO observableSemanticId = 4;
  string topic = 5;
  ReferenceDTO subjectId = 6;
  string timestamp = 7;
  bytes payload = 8;
}

message EventElementPayloadDTO {
  // Intentionally empty
}

message BasicEventElementPayloadDTO {
  ReferenceDTO observed = 1;
  Direction direction = 2;
  StateOfEvent state = 3;
  string messageTopic = 4;
  ReferenceDTO messageBroker = 5;
  string lastUpdate = 6;
  string minInterval = 7;
  string maxInterval = 8;
}

message OperationPayloadDTO {
  repeated OperationVariableDTO inputVariables = 1;
  repeated OperationVariableDTO outputVariables = 2;
  repeated OperationVariableDTO inoutVariables = 3;
}

message OperationVariableDTO {
  SubmodelElementDTO value = 1;
}

message CapabilityPayloadDTO {
  // Intentionally empty
}

message ConceptDescriptionDTO {
  repeated ExtensionDTO extensions = 1;
  string category = 2;
  string idShort = 3;
  repeated LangStringDTO displayName = 4;
  repeated LangStringDTO description = 5;
  AdministrativeInformationDTO administration = 6;
  string id = 7;
  repeated EmbeddedDataSpecificationDTO embeddedDataSpecifications = 8;
  repeated ReferenceDTO isCaseOf = 9;
}

enum ReferenceTypes {
  REFERENCE_TYPE_EXTERNAL_REFERENCE = 0;
  REFERENCE_TYPE_MODEL_REFERENCE = 1;
}

message ReferenceDTO {
  ReferenceTypes type = 1;
  ReferenceDTO ReferredSemanticId = 2;
  repeated KeyDTO keys = 3;
}

message KeyDTO {
  KeyTypes type = 1;
  string Value = 2;
}

enum KeyTypes {
  KEY_TYPES_ANNOTATED_RELATIONSHIP_ELEMENT = 0;
  KEY_TYPES_ASSET_ADMINISTRATION_SHELL = 1;
  KEY_TYPES_BASIC_EVENT_ELEMENT = 2;
  KEY_TYPES_BLOB = 3;
  KEY_TYPES_CAPABILITY = 4;
  KEY_TYPES_CONCEPT_DESCRIPTION = 5;
  KEY_TYPES_DATA_ELEMENT = 6;
  KEY_TYPES_ENTITY = 7;
  KEY_TYPES_EVENT_ELEMENT = 8;
  KEY_TYPES_FILE = 9;
  KEY_TYPES_FRAGMENT_REFERENCE = 10;
  KEY_TYPES_GLOBAL_REFERENCE = 11;
  KEY_TYPES_IDENTIFIABLE = 12;
  KEY_TYPES_MULTI_LANGUAGE_PROPERTY = 13;
  KEY_TYPES_OPERATION = 14;
  KEY_TYPES_PROPERTY = 15;
  KEY_TYPES_RANGE = 16;
  KEY_TYPES_REFERABLE = 17;
  KEY_TYPES_REFERENCE_ELEMENT = 18;
  KEY_TYPES_RELATIONSHIP_ELEMENT = 19;
  KEY_TYPES_SUBMODEL = 20;
  KEY_TYPES_SUBMODEL_ELEMENT = 21;
  KEY_TYPES_SUBMODEL_ELEMENT_COLLECTION = 22;
  KEY_TYPES_SUBMODEL_ELEMENT_LIST = 23;
}

enum DataTypeDefXsd {
  DATA_TYPE_DEF_XSD_ANY_URI = 0;
  DATA_TYPE_DEF_XSD_BASE64_BINARY = 1;
  DATA_TYPE_DEF_XSD_BOOLEAN = 2;
  DATA_TYPE_DEF_XSD_BYTE = 3;
  DATA_TYPE_DEF_XSD_DATE = 4;
  DATA_TYPE_DEF_XSD_DATE_TIME = 5;
  DATA_TYPE_DEF_XSD_DECIMAL = 6;
  DATA_TYPE_DEF_XSD_DOUBLE = 7;
  DATA_TYPE_DEF_XSD_DURATION = 8;
  DATA_TYPE_DEF_XSD_FLOAT = 9;
  DATA_TYPE_DEF_XSD_G_DAY = 10;
  DATA_TYPE_DEF_XSD_G_MONTH = 11;
  DATA_TYPE_DEF_XSD_G_MONTH_DAY = 12;
  DATA_TYPE_DEF_XSD_G_YEAR = 13;
  DATA_TYPE_DEF_XSD_G_YEAR_MONTH = 14;
  DATA_TYPE_DEF_XSD_HEX_BINARY = 15;
  DATA_TYPE_DEF_XSD_INT = 16;
  DATA_TYPE_DEF_XSD_INTEGER = 17;
  DATA_TYPE_DEF_XSD_LONG = 18;
  DATA_TYPE_DEF_XSD_NEGATIVE_INTEGER = 19;
  DATA_TYPE_DEF_XSD_NON_NEGATIVE_INTEGER = 20;
  DATA_TYPE_DEF_XSD_NON_POSITIVE_INTEGER = 21;
  DATA_TYPE_DEF_XSD_POSITIVE_INTEGER = 22;
  DATA_TYPE_DEF_XSD_SHORT = 23;
  DATA_TYPE_DEF_XSD_STRING = 24;
  DATA_TYPE_DEF_XSD_TIME = 25;
  DATA_TYPE_DEF_XSD_UNSIGNED_BYTE = 26;
  DATA_TYPE_DEF_XSD_UNSIGNED_INT = 27;
  DATA_TYPE_DEF_XSD_UNSIGNED_LONG = 28;
  DATA_TYPE_DEF_XSD_UNSIGNED_SHORT = 29;
}

message LangStringDTO {
  string language = 1;
  string text = 2;
}

message EmbeddedDataSpecificationDTO {
  ReferenceDTO dataSpecification = 1;
  DataSpecificationContentDTO dataSpecificationContent = 2;
}

enum DataTypeIec61360 {
  DATA_TYPE_IEC_61360_DATE = 0;
  DATA_TYPE_IEC_61360_STRING = 1;
  DATA_TYPE_IEC_61360_STRING_TRANSLATABLE = 2;
  DATA_TYPE_IEC_61360_INTEGER_MEASURE = 3;
  DATA_TYPE_IEC_61360_INTEGER_COUNT = 4;
  DATA_TYPE_IEC_61360_INTEGER_CURRENCY = 5;
  DATA_TYPE_IEC_61360_REAL_MEASURE = 6;
  DATA_TYPE_IEC_61360_REAL_COUNT = 7;
  DATA_TYPE_IEC_61360_REAL_CURRENCY = 8;
  DATA_TYPE_IEC_61360_BOOLEAN = 9;
  DATA_TYPE_IEC_61360_IRI = 10;
  DATA_TYPE_IEC_61360_IRDI = 11;
  DATA_TYPE_IEC_61360_RATIONAL = 12;
  DATA_TYPE_IEC_61360_RATIONAL_MEASURE = 13;
  DATA_TYPE_IEC_61360_TIME = 14;
  DATA_TYPE_IEC_61360_TIMESTAMP = 15;
  DATA_TYPE_IEC_61360_FILE = 16;
  DATA_TYPE_IEC_61360_HTML = 17;
  DATA_TYPE_IEC_61360_BLOB = 18;
}

message LevelTypeDTO {
  bool min = 1;
  bool nom = 2;
  bool typ = 3;
  bool max = 4;
}

message ValueReferencePairDTO {
  string value = 1;
  ReferenceDTO valueId = 2;
}

message ValueListDTO {
  repeated ValueReferencePairDTO valueReferencePairs = 1;
}

message DataSpecificationContentDTO {
  repeated LangStringDTO preferredName = 1;
  repeated LangStringDTO shortName = 2;
  string unit = 3;
  ReferenceDTO unitId = 4;
  string symbol = 5;
  DataTypeIec61360 dataType = 6;
  repeated LangStringDTO definition = 7;
  string valueFormat = 8;
  ValueListDTO valueList = 9;
  string value = 10;
  LevelTypeDTO levelType = 11;
}